--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!--cover section slider -->
     <section id="home" class="home-cover">
         <div class="cover_slider owl-carousel owl-theme">
-            <div class="cover_item" style="background: url('assets/img/bg/slider.png');">
+            <div class="cover_item" style="background: url('assets/img/bg/slider.jpg');">
                 <div class="slider_content">
                     <div class="slider-content-inner">
                         <div class="container">
@@ -91,24 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="cover_item" style="background: url('assets/img/bg/slider.png');">
-                <div class="slider_content">
-                    <div class="slider-content-inner">
-                        <div class="container">
-                            <div class="slider-content-left">
-                                <h2 class="cover-title">
-                                    Prepare yourself for the
-                                </h2>
-                                <strong class="cover-xl-text">BITSMUN</strong>
-                                <p class="cover-date">
-                                    25-27th October, BITS Pilani, Hyderabad Campus
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="cover_item" style="background: url('assets/img/bg/slider.png');">
+            <div class="cover_item" style="background: url('assets/img/bg/slider1.png');">
                 <div class="slider_content">
                     <div class="slider-content-inner">
                         <div class="container">
