--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 </h2>
                                 <strong class="cover-xl-text">BITSMUN</strong>
                                 <p class="cover-date">
-                                    25-27th October, BITS Pilani, Hyderabad Campus
+                                    26-28th October, BITS Pilani, Hyderabad Campus
                                 </p>
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                                 </h2>
                                 <strong class="cover-xl-text">BITSMUN</strong>
                                 <p class="cover-date">
-                                    25-27th October, BITS Pilani, Hyderabad Campus
+                                    26-28th October, BITS Pilani, Hyderabad Campus
                                 </p>
                             </div>
                         </div>
@@ -118,7 +118,7 @@
                                 </h2>
                                 <strong class="cover-xl-text">BITSMUN</strong>
                                 <p class="cover-date">
-                                    25-27th October, BITS Pilani, Hyderabad Campus
+                                    26-28th October, BITS Pilani, Hyderabad Campus
                                 </p>
                             </div>
                         </div>
@@ -150,12 +150,12 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10">
-                    <h4 class="mb30 text-center color-light">Counter until the big event</h4>
+                    <h3 class="mb30 text-center color-light">Counter until the big event</h4>
                     <div id="timer" class="text-center">
-                        <div class="count-class" id="days"></div>
-                        <div class="count-class" id="hours"></div>
-                        <div class="count-class" id="minutes"></div>
-                        <div class="count-class" id="seconds"></div>
+                        <div class="counter" id="days"></div>
+                        <div class="counter" id="hours"></div>
+                        <div class="counter" id="minutes"></div>
+                        <div class="counter" id="seconds"></div>
                     </div>
 
                 </div>
