--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- ========== Title ========== -->
     <title> BITSMUN-2018</title>
     <!-- ========== Favicon Ico ========== -->
-   
-   
+
+
     <!-- ========== STYLESHEETS ========== -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -45,6 +45,9 @@
             <a class="navbar-brand logo" href="#">
                 <img src="#" alt="BITSMUN-2018" />
             </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#headernav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="lnr lnr-text-align-right"></span>
+            </button>
             <div class="collapse navbar-collapse flex-sm-row-reverse" id="headernav">
                 <ul class=" nav navbar-nav menu">
                     <li class="nav-item">
@@ -116,7 +119,7 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="cover_nav">
+        <div class="cover_nav">
             <ul class="cover_dots">
                 <li class="active" data="0">
                     <span>1</span>
@@ -128,7 +131,7 @@
                     <span>3</span>
                 </li>
             </ul>
-        </div> -->
+        </div>
     </section>
     <!--cover section slider end -->
     <br><br>
@@ -200,44 +203,31 @@
         </div>
     </section>
     <!--about the event end -->
-
-
-    <!--brands section -->
-    <section class="bg-black pt100 pb100">
-        <div class="container">
-            <div class="section_title mb50">
-                <h3 class="title text-white">
-                    COMMITTEES
-                </h3>
+    <!-- committees start  -->
+    <div class="container-fluid">
+        <div class="row bg-black">
+            <div class="col">
+                <div class="row">
+                    <div class="col">
+                        <img src="assets/img/brands/b11.png" class="committees-logos" alt="b11">
+                    </div>
+                    <div class="col">
+                        <img src="assets/img/brands/b12.png" alt="b12" class="committees-logos">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <img src="assets/img/brands/b13.png" class="committees-logos" alt="b11">
+                    </div>
+                    <div class="col">
+                        <img src="assets/img/brands/b14.png" alt="b12" class="committees-logos">
+                    </div>
+                </div>
             </div>
-            <div class="brand_carousel owl-carousel">
-                <div class="brand_item text-center">
-                    <img src="assets/img/brands/b11.png" alt="brand">
-                    <div class="committees-text">Committee 1</div>
-                </div>
-                <div class="brand_item text-center">
-                    <img src="assets/img/brands/b12.png" alt="brand">
-                    <div class="committees-text">Committee 2</div>
-                </div>
-
-                <div class="brand_item text-center">
-                    <img src="assets/img/brands/b13.png" alt="brand">
-                    <div class="committees-text">Committee 3</div>
-                </div>
-                <div class="brand_item text-center">
-                    <img src="assets/img/brands/b14.png" alt="brand">
-                    <div class="committees-text">Committee 4</div>
-                </div>
-                <!-- <div class="brand_item text-center">
-                    <img src="assets/img/brands/b15.png" alt="brand">
-                </div>
-                <div class="brand_item text-center">
-                    <img src="assets/img/brands/b16.png" alt="brand">
-                </div> -->
-            </div>
+            <div class="col"></div>
         </div>
-    </section>
-    <!--brands section end-->
+    </div>
+    <!-- committees end -->
 
     <!--get tickets section -->
     <section class="bg-img pt20 pb50" style="background-color: hsla(0, 100%, 25%, 0.1)">
@@ -341,7 +331,7 @@
                     </div>
                 </div>
 
-                
+
 
             </div>
         </div>
