--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    
     <!-- ========== STYLESHEETS ========== -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script> 
     <!-- Bootstrap CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Fonts Icon CSS -->
@@ -238,7 +239,7 @@
     <!--brands section end-->
 
     <!--get tickets section -->
-    <section class="bg-img pt20 pb50" style="background-color: hsla(0, 100%, 25%, 0.1)">
+    <section class="bg-img pt20 pb50" style="background-color: #FFB3B3">
         <div class="container">
             <div class="section_title mb30">
                 <h3 class="title color-dark text-center">
