--- a/team1.html
+++ b/team1.html
@@ -8,12 +8,20 @@
     <meta name="keywords" content="Evento , Event , Html, Template">
     <meta name="author" content="ColorLib">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    
     <!-- ========== Title ========== -->
     <title> BITSMUN - TEAM</title>
     <!-- ========== Favicon Ico ========== -->
     <!--<link rel="icon" href="fav.ico">-->
     <!-- ========== STYLESHEETS ========== -->
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <!-- Bootstrap CSS -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <!-- Fonts Icon CSS -->
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
@@ -26,6 +34,18 @@
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
+    <style>
+ .team-heading{ 
+     font-family: 'Noticia Text', serif; margin-left: 10%; line-height: 1em; color: #000;
+}
+div {
+  box-sizing: border-box;
+  }
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+    </style>
 </head>
 
 <body>
@@ -35,15 +55,18 @@
     </div>
 
     <!--header start here -->
-    <header class="header navbar fixed-top navbar-expand-md">
+    <header class="header navbar fixed-top navbar-expand-md mr5">
         <div class="container">
             <a class="navbar-brand logo" href="#">
                 <img src="#" alt="BITSMUN-2018" />
             </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#headernav" aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
+                <span class="glyphicon glyphicon-menu-down"></span>
+            </button>
             <div class="collapse navbar-collapse flex-sm-row-reverse" id="headernav">
                 <ul class=" nav navbar-nav menu">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">LETTER</a>
+                        <a class="nav-link active" href="#letter">LETTER</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="#">COMMITTEES</a>
@@ -51,14 +74,14 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="ministries.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">APPLICATIONS</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" href="#">Executive Board</a>
-                            <a class="dropdown-item" href="#">International Press Head</a>
+                            <a class="dropdown-item" href="https://docs.google.com/forms/u/2/d/e/1FAIpQLScJrP0AGED5x2y7NO03G4OZu5kKH39elrKjDJkcKx5Cubce3A/formResponse">Executive Board</a>
+                            <a class="dropdown-item" href="https://docs.google.com/forms/u/2/d/e/1FAIpQLSd29cuyDY9fXEi1UO6RuGafKKHNGInH4eGfGxAaJREcjjILbg/formResponse">International Press Head</a>
                             <a class="dropdown-item" href="#">International Press Member</a>
                             <a class="dropdown-item" href="#">Delegation</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">TEAM</a>
+                        <a class="nav-link " href="team1.html">TEAM</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="#">SPONSORS</a>
@@ -73,7 +96,7 @@
     </header>
 
 
-    <section class="team-heading text-center"> Our Team that made it look easy .</section>
+    <h2 class="text-center mt100 mb100 team-heading"> Our Team that made it look easy .</h2>
     <!-- <div class="team-photos">
     <div class="team-image">
         <div class="team-pic"><img src="./assets/img/Team Photos/Utkarsh Shankar BITSMUN Secretary .jpg"></div>
@@ -97,14 +120,14 @@
     </div>
 </div> -->
     <div id="team" class="container-fluid text-center bg-grey">
-        <div class="row">
+        <div class="row text-center">
             <div class="col-lg-12 text-center">
                 <h3 class="team-subheading">Office Bearers</h3>
             </div>
         </div>
-        <di v class="row text-center slideanim slide">
+        <div class="row text-center mr-auto">
 
-            <div class="col-sm-4">
+            <div class="col-md-4 col-sm-12">
                 <div class="team-member">
                     <img src="assets/img/Team Photos/NIshant Aggarwal Web Development Executive  .jpg" class="team-image rounded-circle" alt="">
                     <h3 class="team-name"> Nishant Aggarwal</h3>
@@ -123,7 +146,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4 col-sm-12 team-member-card">
                 <div class="team-member">
                     <img src="img/heads/1.jpg" class="img-responsive img-circle" style="width:250px!important;height:250px!important;" alt="">
                     <h3>Ishan Rai</h3>
@@ -142,7 +165,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-md-4 col-sm-12 team-member-card justify-content-sm-center">
                 <div class="team-member">
                     <img src="img/heads/2.jpg" class="img-responsive img-circle" style="width:250px!important;height:250px!important;" alt="">
                     <h3>Shubham Sharma</h3>
