--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" /> -->
     <!-- ========== Title ========== -->
     <title> BITSMUN-2018</title>
-    <!-- ========== Favicon Ico ========== -->
+
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
 
 
     <!-- ========== STYLESHEETS ========== -->
@@ -64,7 +66,7 @@
     <header class="header navbar fixed-top navbar-expand-md">
         <div class="container">
             <a class="navbar-brand logo" href="#">
-                <img src="#" alt="BITSMUN-2018" />
+                <span style="font-family: 'Fredericka the Great', cursive; color: white"><big>BITSMUN HYDERABAD</big> </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#headernav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="lnr lnr-text-align-right"></span>
@@ -165,7 +167,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-10">
-                    <h2 class="mb30 text-center color-light">Clock's ticking ...</h4>
+                    <h2 class="mb30 text-center color-light" style="font-family: 'Berkshire Swash', cursive;">See you in... </h4>
                         <div id="timer" class="text-center">
                             <div class="counter" id="days"></div>
                             <div class="counter" id="hours"></div>
@@ -231,7 +233,7 @@
         <div class="w3-content w3-display-container" style="max-width: none; margin: 20px;display: block;">
             <div class="mySlides" style="width:100%;">
                 <div class="section_title committee-header">
-                    <div class="row pb25">
+                    <div class="row pb50">
                         <div class = "col-xs-12 col-sm-12 col-md-12">
                             <span class="color-light center-block">
                                 <h3 class="color-light center-block">COMMITTEES</h3>
@@ -243,7 +245,7 @@
                         <div class="col-md-5 col-xs-12 col-sm-12 center-block">
                             <img src="assets/img/brands/b13.png" style="height: 100px; float: left; display: block" alt="">
                             <div class="center-block color-light float-left">
-                                <h5 class="color-light" ><br><br>United Nations General Assembly</h5>
+                                <h5 class="color-light" ><br> &nbsp United Nations General Assembly</h5>
                             </div>
                         </div>
                     </div>
@@ -279,7 +281,7 @@
                     </div>
 
 
-                    <div class="col-md-5 col-xs-12 col-sm-12 letter-para-text text-white text-uppercase d-sm-inline pl0">
+                    <div class="col-md-5 col-xs-12 col-sm-12 letter-para-text text-white text-uppercase d-sm-inline pl0 pr80">
                         <br><br>The United Nations General Assembly (UNGA) is the largest congregation of nations that recommends legal, political, economic,
                         social and humanitarian efforts that help save lives of millions across the world, where each country
                         has an equal voice and vote regardless of the agenda. Witness and be a part of the passionate speeches,
@@ -337,7 +339,7 @@
                             </div>
                         </div>                        
                     </div>
-                    <div class="col-md-5 col-xs-12 col-sm-12 letter-para-text text-white text-uppercase d-sm-inline"><br><br>
+                    <div class="col-md-5 col-xs-12 col-sm-12 letter-para-text text-white text-uppercase d-sm-inline pl0 pr80"><br><br>
                         SAARC, the South Asian Association for Regional Cooperation, was founded with lofty goals to “promote the welfare of the people of South Asia” and to “strengthen collective self-reliance among the countries of South Asia” promoting active collaboration and mutual assistance in the economic, social, cultural, technical and scientific fields. 
 
                         Test your skills as you try to find common ground with bitter enemies and neighbors to come to a mutually beneficial consensus. 
@@ -393,7 +395,7 @@
                             </div>
                         </div>                        
                     </div>
-                    <div class="col-md-5 col-xs-12 col-sm-12 letter-para-text text-white text-uppercase d-sm-inline"><br><br>
+                    <div class="col-md-5 col-xs-12 col-sm-12 letter-para-text text-white text-uppercase d-sm-inline pl0 pr80"><br><br>
                         "War is organized murder and nothing else"
                         Presenting to you, the United Nations Security Council. The committee at the center of all the action, often holding the match to the fuse. UNSC is the only committee in the United Nations with the ability to make resolutions binding on all member nations. It has played an important role over the past few years in maintaining peace and security in the international community. 
                         If you're the kind of delegate that wants to get past the diplomatic posturing and take actions with immediate consequences, UNSC at BITSMUN Hyderabad is the place to be.
@@ -449,7 +451,7 @@
                             </div>
                         </div>                        
                     </div>
-                    <div class="col-md-5 col-xs-12 col-sm-12 letter-para-text text-white text-uppercase d-sm-inline"><br><br>
+                    <div class="col-md-5 col-xs-12 col-sm-12 letter-para-text text-white text-uppercase d-sm-inline pl0 pr80"><br><br>
                         The stakes have never been higher. A catastrophic event. A world leader is shot dead. Chances of nuclear war? Anything can happen.
                         Or what if we could go back in time? Learn from our mistakes and change the course history. Play different roles and do things differently. 
                         If fast paced and action packed committees are for you, BITSMUN Hyderabad is the place to be. Introducing the Joint Crisis Committee where the opportunities are truly limitless.
@@ -505,7 +507,7 @@
                             </div>
                         </div>                        
                     </div>
-                    <div class="col-md-5 col-xs-12 col-sm-12 letter-para-text text-white text-uppercase d-sm-inline"><br><br>
+                    <div class="col-md-5 col-xs-12 col-sm-12 letter-para-text text-white text-uppercase d-sm-inline pl0 pr80"><br><br>
                         There can be no peace without development, no development without peace and no lasting peace or sustainable development without respect for human rights and the rule of law. These rights are for all of us. Whoever we are and wherever we are from; no matter our class, our opinions, our sexual orientation.
                         When the rights of one are threatened, the rights of all are diminished. Our support goes to those in the constant struggle to gain these rights or keep them. Our strength is our unity. Unity is our purpose. Unite, uphold and strengthen the importance of securing human rights for all people at BITSMUN'18.
                     </div>
@@ -716,8 +718,8 @@
     
     <!-- committees end -->
 
-    <!--get tickets section -->
-    <section class="bg-img pt20 pb50" style="background-color: #FFBDBD">
+    <!--contact us section -->
+    <section class="bg-img pt20 pb50" style="background-image: url(assets/img/bg/contact-us.jpg);">
         <div class="container">
             <div class="section_title mb30">
                 <h3 class="title color-dark text-center">
@@ -746,7 +748,7 @@
                             <img src="./assets/img/mobile.png" height="25" width="25">
                         </div>
                         <div class="col-md-6 pt5 pb5 color-dark">
-                            <strong>+918851228197</strong>
+                            <strong>+91&nbsp8851228197</strong>
                         </div>
                     </div>
                     <div class="row">
@@ -791,41 +793,41 @@
 
     <!--footer start -->
     <footer>
-        <div class="container">
-            <div class="row justify-content-center">
+        <div class="container pt0 pb0">
+            <div class="row justify-content-center pt0 pb0">
 
-                <div class="col-md-4 col-12">
+                <div class="col-md-4 col-12 pt0 pb0">
                     <div class="footer_box">
-                        <div class="footer_header">
-                            <div class="footer_logo">
-                                <img src="assets/img/LOGO2.png" height="108" width="108" alt="BITSMUN-2018 logo">
-                            </div>
-                        </div>
                         <div class="footer_box_body">
                             <ul class="footer_social">
                                 <li>
-                                    <a href="#">
-                                        <i class="ion-social-pinterest"></i>
+                                    <a href="https://github.com/Kailash0311/BITSMUN-2018">
+                                        <i class="ion-social-github"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://www.facebook.com/bitsmun.hyd">
                                         <i class="ion-social-facebook"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://twitter.com/bitsmunhyd">
                                         <i class="ion-social-twitter"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
-                                        <i class="ion-social-dribbble"></i>
+                                    <a href="https://bitsmunhyd.wordpress.com/">
+                                        <i class="ion-social-wordpress"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="https://www.instagram.com/bitsmunhyd/">
                                         <i class="ion-social-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.snapchat.com/add/bitsmun"
+                                        <i class="ion-social-snapchat"></i>
                                     </a>
                                 </li>
                             </ul>
