--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/icon" href="assets/img/favicon.ico">
 
     <!-- ========== STYLESHEETS ========== -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
