--- a/team1.html
+++ b/team1.html
@@ -25,6 +25,7 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     
     <!-- Bootstrap CSS -->
+    <link rel="shortcut icon" type="image/icon" href="assets/img/favicon.ico">
     <link href="assets/css/main.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
