--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <div class="col-md-7 col-xs-12 col-sm-12 text-uppercase" style="display: block;">
                         <div class="row">
                             <div class="col-md-3 center-block text-center">
-                                <img src="assets/img/Team Photos/Kshitij Jain Director UNGA.jpg" alt="" class="rounded-circle" style="height:250px; display: block; min-width: 250px;"><br>
+                                <img src="assets/img/Team Photos/Kshitij Jain Director UNGA.jpg" alt="" class="rounded-circle" style=" display: block;"><br>
                                 
                                 <h7 class="color-light ml300">Kshitij Jain</h7><br>
                                 <h7 class="color-light">Director</h7>
@@ -277,7 +277,7 @@
                                 </ul>
                             </div>
                             <div class="col-md-3 center-block text-center">
-                                <img src="assets/img/PHOTOS FOR WEBSITE/Tejas Vaid Director GA.jpg" alt="" class="rounded-circle" style="height:250px; display: block; min-width: 250px;"><br>
+                                <img src="assets/img/PHOTOS FOR WEBSITE/Tejas Vaid Director GA.jpg" alt="" class="rounded-circle" style="display: block;"><br>
                                 <h7 class="color-light">Tejas Vaid</h7><br>
                                 <h7 class="color-light">Director</h7>
                             
@@ -358,7 +358,7 @@
                                 <!-- <img src="assets/img/Team Photos/NIshant Aggarwal Web Development Executive.jpg" alt="" class="rounded-circle" style="height:150px; display: block;"><br>
                                 <h7 class="color-light">Nishant Aggarwal</h7><br>
                                 <h7 class="color-light">WEB DEV EXECUTIVE</h7> -->
-                                <img src="assets/img/Team Photos/Rohit Dwivedula SAARC Director.jpg" alt="" class="rounded-circle" style="height:250px; display: block;"><br>
+                                <img src="assets/img/Team Photos/Rohit Dwivedula SAARC Director.jpg" alt="" class="rounded-circle" style="display: block;"><br>
                                 <h7 class="color-light">Rohit Dwivedula</h7><br>
                                 <h7 class="color-light">Director</h7>
                                 <hr>
@@ -430,7 +430,7 @@
                                 <!-- <img src="assets/img/Team Photos/NIshant Aggarwal Web Development Executive.jpg" alt="" class="rounded-circle" style="height:150px; display: block;"><br>
                                 <h7 class="color-light">Nishant Aggarwal</h7><br>
                                 <h7 class="color-light">WEB DEV EXECUTIVE</h7> -->
-                                <img src="assets/img/Team Photos/Dev Gupta Director Security Council.jpg" alt="" class="rounded-circle" style="height:250px; display: block;"><br>
+                                <img src="assets/img/PHOTOS FOR WEBSITE/Dev Gupta Director Security Council.jpg" alt="" class="rounded-circle" style="display: block;"><br>
                                 <h7 class="color-light">Dev Gupta</h7><br>
                                 <h7 class="color-light">Director</h7>
                                 <hr>
@@ -499,7 +499,7 @@
                     <div class="col-md-7 col-xs-12 col-sm-12" style="display: block">
                         <div class="row">
                             <div class="col-md-3 center-block text-center text-uppercase">
-                                <img src="assets/img/Team Photos/Shaaban Karim Director Continous Crisis Committee.jpg" alt="" class="rounded-circle" style="height:250px; display: block;"><br>
+                                <img src="assets/img/Team Photos/Shaaban Karim Director Continous Crisis Committee.jpg" alt="" class="rounded-circle" style="display: block;"><br>
                                 <h7 class="color-light">Shaaban Karim</h7><br>
                                 <h7 class="color-light">Director</h7>
                                 <hr>
@@ -568,7 +568,7 @@
                     <div class="col-md-7 col-xs-12 col-sm-12" style="display: block">
                         <div class="row">
                             <div class="col-md-3 center-block text-center text-uppercase">
-                                <img src="assets/img/PHOTOS FOR WEBSITE/Rishabh Shrimal HRC Director.jpg" alt="" class="rounded-circle" style="height:250px; display: block;"><br>
+                                <img src="assets/img/PHOTOS FOR WEBSITE/Rishabh Shrimal HRC Director.jpg" alt="" class="rounded-circle" style=" display: block;"><br>
                                 <h7 class="color-light">Rishabh Shrimal</h7><br>
                                 <h7 class="color-light">Director</h7>
                                 <hr>
@@ -586,7 +586,7 @@
                             </ul>
                             </div>
                             <div class="col-md-3 center-block text-center text-uppercase">
-                                <img src="assets/img/Team Photos/Sonakshi Gupta Director HRC.jpg" alt="" class="rounded-circle ml20" style="height:250px; display: block;"><br>
+                                <img src="assets/img/Team Photos/Sonakshi Gupta Director HRC.jpg" alt="" class="rounded-circle ml20" style="display: block;"><br>
                                 <h7 class="color-light mb50 ml0">Sonakshi Gupta</h7><br>
                                 <h7 class="color-light mb50 ">Director</h7>
                                 <!-- <hr> -->
