--- a/team1.html
+++ b/team1.html
@@ -17,6 +17,7 @@
     <!-- Bootstrap CSS -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
     <script src="assets/js/float-panel/float-panel.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.1/css/uikit.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.1/js/uikit.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
@@ -82,8 +83,8 @@ div {
     <!--header start here -->
     <header class="header navbar fixed-top navbar-expand-md mr5">
         <div class="container">
-            <a class="navbar-brand logo" href="#">
-                <span style="font-family: 'Fredericka the Great', cursive; color: white"><big>BITSMUN HYDERABAD</big> </span>
+            <a class="navbar-brand logo" href="index.html">
+                <span style="font-family: 'Fredericka the Great', cursive; color: white">BITSMUN HYDERABAD</span>
             </a>
             <!-- <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#headernav" aria-expanded="false" aria-label="Toggle navigation" style="border: none; margin-right: 20%;">
                     
