re-designed committee in mobile

--- a/team1.html
+++ b/team1.html
@@ -511,7 +511,7 @@ div {
         </div>
         <div class="col-md-4 col-sm-12">
             <div class="team-member">
-                <h3 class="team-name">Sarash Agarwal</h3>
+                <h3 class="team-name">Saransh Agarwal</h3>
                 <div>
                         <img src="assets/img/PHOTOS FOR WEBSITE/Saransh Agarwal Offline Publicity Executive.jpg" alt="" class="rounded-circle team-image" style="height: 250px;">
                 </div>
