--- a/index.html
+++ b/index.html
@@ -228,7 +228,19 @@
                     <p class="letter-para-text">The Organising Committee of BITSMUN Hyderabad '18 and I once again cordially welcome you to three days
                         of intense debate, shrewd diplomacy and an experience to cherish for times to come!</p>
 
-
+                    <br>
+                    <div class="text-center" style="color: #1F1F1F; font-size:20px;">
+                        <img src="assets/img/PHOTOS FOR WEBSITE/sec-gen_sign.jpg" alt="" style="width:300px;">
+                        <p style="margin-bottom: 3px; color: #1F1F1F; font-size:20px;">
+                        Pratyush Agarwal
+                        </p>
+                        <p  style="margin-bottom: 3px; color: #1F1F1F; font-size:20px;">
+                        Secretary General
+                        </p>  
+                        <p style="margin-bottom: 3px; color: #1F1F1F; font-size:20px;">  
+                        BITSMUN HYDERABAD'18
+                    </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1029,6 +1041,9 @@
                         </div>
 
                     </div>
+                </div>
+                <div class="text-center">
+                &copy BITSMUN'18 HYDERABAD
                 </div>
             </footer>
             <!--footer end -->
