--- a/team1.html
+++ b/team1.html
@@ -85,7 +85,7 @@ div {
         <div class="container">
             
             <a class="navbar-brand logo" href="#header">
-                    <span class="navbar-heading">
+                    <span class="navbar-heading d-none">
                         <big>BITSMUN HYDERABAD</big>
                     </span>
             </a>
@@ -106,7 +106,12 @@ div {
         </div>
     </header>
 
-    <h1 class="text-center mt100 mb100 team-heading ml-1">BITSMUN HYDERABAD '18</h1>
+    <div class="row bg-black center-block text-center">
+        <div class="col-md-4"></div>
+        <div class="col-md-4 col-sm-12">
+        <h1 class="text-center text-white mt100 mb100 team-heading ml-1">BITSMUN HYDERABAD '18</h1>
+        </div>
+    </div>
     <h2 class="text-center mt100 mb100 team-heading ml-1">Our Team that made it look Easy</h2>
     <!-- <div class="team-photos">
     <div class="team-image">
