--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
+    <script src="//www.townscript.com/popup-widget/townscript-widget.nocache.js" type="text/javascript"></script>
+
     <!-- Bootstrap CSS -->
 
     <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -200,9 +202,9 @@
 
                             <a class="dropdown-item" href="https://docs.google.com/forms/u/2/d/e/1FAIpQLSd29cuyDY9fXEi1UO6RuGafKKHNGInH4eGfGxAaJREcjjILbg/formResponse">International Press Head</a>
 
-                            <!-- <a class="dropdown-item" href="#">International Press Member</a>
+                            <a class="dropdown-item" href="https://goo.gl/forms/a71k5zZ9aiD5Oo3T2">International Press Member</a>
 
-                            <a class="dropdown-item" href="#">Delegation</a> -->
+                            <a class="dropdown-item" href="https://goo.gl/forms/0V3H9JfbjUE2q1Eg2">Delegate Application</a>
 
                         </div>
 
@@ -214,11 +216,11 @@
 
                     </li>
 
-                    <!-- <li class="nav-item">
+                     <li class="nav-item">
 
-                        <a class="nav-link " href="#sponsors">SPONSORS</a>
+                        <a class="nav-link tsbutton" href="https://www.townscript.com/e/bitsmun-18">TICKETS</a>
 
-                    </li> -->
+                    </li> 
 
                     <li class="nav-item">
 
@@ -1976,9 +1978,7 @@
 
                                     </div>
 
-                                </form>	
-
-                    
+                                </form>                    
 
                             </div>
 
