addition of the chairpersons and vice chairpersons

--- a/index.html
+++ b/index.html
@@ -581,6 +581,39 @@
                                             <!-- Modal body -->
 
                                             <div class="modal-body">
+                                                <div class="row">
+                                                    <div class="col-md-12">
+                                                        <h5 style="color: rgb(59, 89, 152) !important">Agenda: Addressing the people's right to self determination</h5>
+                                                    </div>
+                                                </div>
+                                                <br>
+                                                <div class="row">
+
+                                                    <div class="col-md-6">
+
+                                                        <img src="assets/img/Team Photos/Varad.jpg" class="rounded-circle" alt="" style="height: 150px !important;">
+
+                                                        <br>
+
+                                                        <h4 style="color: rgb(59, 89, 152) !important">Varad Choudhary</h3>
+
+                                                            <h7 class="color-black">Chair-person</h7>
+
+                                                    </div>
+
+                                                    <div class="col-md-6">
+
+                                                        <img src="assets/img/Team Photos/rakshak.jpg" class="rounded-circle" alt="" style="height: 150px !important;">
+
+                                                        <br>
+
+                                                        <h4 style="color: rgb(59, 89, 152) !important">Rakshak Bharath</h3>
+
+                                                            <h7 class="color-black">Vice Chair-person</h7>
+
+                                                    </div>
+
+                                                </div>
 
                                                 <div class="row">
 
@@ -739,6 +772,43 @@
                                             <div class="modal-body">
 
                                                 <div class="row">
+                                                    <div class="col-md-12">
+                                                        <h6 style="color: rgb(59, 89, 152) !important">Agenda: Discussing the future of SAARC and how increased cooperation can be achieved among states.</h6>
+                                                    </div>
+                                                </div>
+                                                <br>
+
+                                                <div class="row">
+
+                                                    <div class="col-md-6 center-block text-center">
+
+                                                        <img src="assets/img/Team Photos/Tanmei.jpg" class="rounded-circle" alt="" style="height: 150px !important;">
+
+                                                        <br>
+
+                                                        <h4 style="color: rgb(59, 89, 152) !important">Tanmei Kamath</h3>
+
+                                                            <h7 class="color-black">Chair-person</h7>
+
+                                                    </div>
+
+                                                    <div class="col-md-6 center-block text-center">
+
+                                                        <img src="assets/img/Team Photos/Jaideep.jpg" class="rounded-circle" alt="" style="height: 150px !important;">
+
+                                                        <br>
+
+                                                        <h4 style="color: rgb(59, 89, 152) !important">Jaideep P V</h3>
+
+                                                            <h7 class="color-black">Vice Chair-person</h7>
+
+                                                    </div>
+
+
+
+                                                </div>
+
+                                                <div class="row">
 
                                                     <div class="col-md-6 center-block text-center">
 
@@ -746,7 +816,7 @@
 
                                                         <br>
 
-                                                        <h4 style="color: rgb(59, 89, 152) !important">RohitDwivedula</h3>
+                                                        <h4 style="color: rgb(59, 89, 152) !important">Rohit Dwivedula</h3>
 
                                                             <h7 class="color-black">Director</h7>
 
@@ -881,6 +951,41 @@
                                             <!-- Modal body -->
 
                                             <div class="modal-body">
+
+                                                <div class="row">
+                                                    <div class="col-md-12">
+                                                        <h6 style="color: rgb(59, 89, 152) !important">Agenda: The promotion and strengthening of rule of law in conflict situations with emphasis on post conflict peace building.</h6>
+                                                    </div>
+                                                </div>
+                                                <br>
+
+                                                <div class="row">
+
+                                                    <div class="col-md-6 text-center center-block">
+
+                                                        <img src="assets/img/Team Photos/neel.jpg" class="rounded-circle" alt="" style="height: 150px !important;">
+
+                                                        <br>
+
+                                                        <h4 style="color: rgb(59, 89, 152) !important">Neel Duttaroy</h3>
+
+                                                            <h7 class="color-black">Co-Chairperson</h7>
+
+                                                    </div>
+
+                                                    <div class="col-md-6 text-center center-block">
+
+                                                        <img src="assets/img/Team Photos/Abhradeep.jpg" class="rounded-circle" alt="" style="height: 150px !important;">
+
+                                                        <br>
+
+                                                        <h4 style="color: rgb(59, 89, 152) !important">Abhradeep Mukherjee</h3>
+
+                                                            <h7 class="color-black">Co-Chairperson</h7>
+
+                                                    </div>
+
+                                                </div>
 
                                                 <div class="row">
 
@@ -1027,6 +1132,31 @@
                                             <div class="modal-body">
 
                                                 <div class="row">
+                                                    <div class="col-md-12">
+                                                        <h5 style="color: rgb(59, 89, 152) !important">Agenda: Rebuilding Syria 2020</h5>
+                                                    </div>
+                                                </div>
+                                                <br>
+
+                                                <div class="row">
+
+                                                    <div class="col-md-6 text-center center-block">
+
+                                                        <img src="assets/img/Team Photos/Jamin.jpg" class="rounded-circle" alt=""
+
+                                                            style="height: 150px !important;">
+
+                                                        <br>
+
+                                                        <h4 style="color: rgb(59, 89, 152) !important">Jamin Shah</h3>
+
+                                                            <h7 class="color-black">Co-Chairperson</h7>
+
+                                                    </div>
+
+                                                </div>
+
+                                                <div class="row">
 
                                                     <div class="col-md-6 text-center center-block">
 
@@ -1167,6 +1297,43 @@
                                             <!-- Modal body -->
 
                                             <div class="modal-body">
+
+                                                <div class="row">
+                                                    <div class="col-md-12">
+                                                        <h6 style="color: rgb(59, 89, 152) !important">Agenda: 1)Supporting sustainable return and reintegration of refugees and internally displaced persons.
+                                                            <br>
+                                                            2)Equitable access to safe drinking water as a human right.</h6>
+                                                    </div>
+                                                </div>
+                                                <br>
+
+                                                <div class="row">
+
+                                                    <div class="col-md-6 text-center center-block">
+
+                                                        <img src="assets/img/Team Photos/vaivab.jpg" class="rounded-circle" alt="" style="height: 150px !important;">
+
+                                                        <br>
+
+                                                        <h4 style="color: rgb(59, 89, 152) !important">Vaivab Das</h3>
+
+                                                            <h7 class="color-black">Chair-person</h7>
+
+                                                    </div>
+
+                                                    <div class="col-md-6 text-center center-block">
+
+                                                        <img src="assets/img/Team Photos/Karishma.jpg" class="rounded-circle" alt="" style="height: 150px !important;">
+
+                                                        <br>
+
+                                                        <h4 style="color: rgb(59, 89, 152) !important">Karishma Kharbanda</h3>
+
+                                                            <h7 class="color-black">Vice Chair-person</h7>
+
+                                                    </div>
+
+                                                </div>
 
                                                 <div class="row">
 
@@ -1708,9 +1875,7 @@
 
                                         </div>
 
-                                        <img src="assets/img/PHOTOS FOR WEBSITE/Shaaban Karim Director Continous Crisis Committee.jpg" class="rounded-circle" alt=""
-
-                                            style="height: 75px !important;">
+                                        <img src="assets/img/PHOTOS FOR WEBSITE/Shaaban Karim Director Continous Crisis Committee.jpg" class="rounded-circle" alt="" style="height: 75px !important;">
 
                                         <br>
 
